tests/ui/macros/issue-61053-unbound.stderr
error: unknown macro variable `k`
  --> $DIR/issue-61053-unbound.rs:5:55
   |
LL |     ($( $i:ident = $($j:ident),+ );*) => { $( $( $i = $k; )+ )* };
   |                                                       ^^
   |
note: the lint level is defined here
  --> $DIR/issue-61053-unbound.rs:1:9
   |
LL | #![deny(meta_variable_misuse)]
   |         ^^^^^^^^^^^^^^^^^^^^

error: unknown macro variable `k`
  --> $DIR/issue-61053-unbound.rs:14:63
   |
LL |             ($( $i:ident = $($j:ident),+ );*) => { $( $( $i = $k; )+ )* };
   |                                                               ^^

error: unknown macro variable `k`
  --> $DIR/issue-61053-unbound.rs:20:29
   |
LL |             () => { $( $i = $k)+ };
   |                             ^^

error: aborting due to 3 previous errors

